# ID666Edit

./: .gitmodules  CMakeLists.txt  README.md
ID666Edit/: CMakeLists.txt  SpcHeader.cpp  main.cpp
include/: ExtendedID666Item.h  FileNameToTagWindow.h  ID666BinaryTag.h  ID666Edit.h  ID666ExtendedItem.h  ID666ExtendedTag.h  ID666TagType.h  ID666TextTag.h  IncrementTrackWindow.h  MainWindow.h  Program.h  SetCommand.h  SpcBinaryField.h  SpcDateField.h  SpcEmulatorField.h  SpcField.h  SpcFile.h  SpcFileStream.h  SpcFormat.h  SpcHeader.h  SpcNumericField.h  SpcStruct.h  SpcTextField.h  SpcTrackField.h  StringTokenizer.h  TagToFileNameWindow.h  WidgetID.h
src/: CMakeLists.txt  ExtendedID666Item.cpp  FileNameToTagWindow.cpp  ID666BinaryTag.cpp  ID666Edit.cpp  ID666ExtendedItem.cpp  ID666ExtendedTag.cpp  ID666TextTag.cpp  IncrementTrackWindow.cpp  MainWindow.cpp  Program.cpp  SpcDateField.cpp  SpcFile.cpp  SpcFileStream.cpp  SpcFormat.cpp  SpcHeader.cpp  SpcNumericField.cpp  SpcStruct.cpp  SpcTrackField.cpp  TagToFileNameWindow.cpp  main.cpp
